fix: code block font size consistent on iOS mobile
After many calories burned, the solution was just a Google away:
https://github.com/adityatelange/hugo-PaperMod/issues/828#issuecomment-1171994855

...just gotta find the right Google words, evidently.

--- a/themes/mdb/assets/sass/base/_base.scss
+++ b/themes/mdb/assets/sass/base/_base.scss
@@ -31,3 +31,12 @@ ul, li {
 img {
   display: block;
 }
+
+// iOS rendering workaround to consistently render font-size on iOS mobile
+// https://github.com/adityatelange/hugo-PaperMod/issues/828#issuecomment-1171994855
+code {
+  text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
